[metadata]
name = daoliagent
summary = Openflow controller
license = Apache License 2.0
description-file = README.rst
author = Daolicloud
author-email = dalinet@daolicloud.com
home-page = http://www.daolicloud.com
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
keywords =
    openflow
    openvswitch
    openstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    daoliagent
data_files =
    /etc/ryu =
        etc/ryu/ryu.conf


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    daoliagent = daoliagent.manager:main
